--- a/css/styles.css
+++ b/css/styles.css
@@ -45,12 +45,6 @@ h2 {
 
 @media all and (max-width: 640px) {
     h2 {
-        font-size: 1.2em;
-    }
-}
-
-@media all and (max-width: 320px) {
-    h2 {
         font-size: 1.4em;
     }
 }
@@ -126,7 +120,6 @@ img.background-full {
     filter: alpha(opacity=10);
     -moz-opacity: 0.1;
     -khtml-opacity: 0.1;
-    opacity: .1;
     zoom: 1;
     position: fixed;
     top: 0;
@@ -135,4 +128,22 @@ img.background-full {
     width: 100%;
     min-height: 100%;
     height: auto;  
+}
+
+@media all and (max-width: 960px) {
+    img.background-full {
+        opacity: .6;
+    }
+}
+
+@media all and (max-width: 640px) {
+    img.background-full {
+        opacity: .2;
+    }
+}
+
+@media all and (max-width: 320px) {
+    img.background-full {
+        opacity: .1;
+    }
 }
