--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,7 @@ a:active {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 
@@ -102,6 +103,7 @@ a:active {
     position: absolute;
     bottom: 0;
     left: 0;
+    z-index: 1;
 }
 
 #footer ul {
@@ -124,10 +126,11 @@ img.background-full {
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 0;
     min-width: 1024px;
     width: 100%;
     min-height: 100%;
-    height: auto;  
+    height: auto;
 }
 
 @media all and (max-width: 960px) {
