--- a/css/styles.css
+++ b/css/styles.css
@@ -1,152 +1,193 @@
-/***************/
-/* Wolf Detrix */
-/***************/
-
-/* Font Imports */
 @import url(http://fonts.googleapis.com/css?family=Stalinist+One);
 
 body {
-    color: #333;
-    font-size: 16px;
+    font-family: sans-serif;
+    background-color: #3c3f42;
 }
 
-/* General Copy */
-
-h1, h2 {
-    margin-top: 0;
+* {
+    box-sizing: border-box;
 }
 
-h1 {
-    font-size: 3.5em;
-    font-family: 'Stalinist One';
-    text-transform: uppercase;
-    line-height: .9em;
-    margin-bottom: 0;
+img {
+    max-width: 100%;
 }
 
-@media all and (max-width: 640px) {
-    h1 {
-        font-size: 2.6em;
-    }
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
-@media all and (max-width: 320px) {
-    h1 {
-        font-size: 2.2em;
-    }
+.content {
+    margin-bottom: 1em;
 }
 
-h2 {
-    color: #999;
-    font-size: 1.6em;
-    font-weight: 100;
-    margin-bottom: .5em;
+.content-box {
+    overflow: hidden;
+    background-color: white;
+    border-radius: .4em;
+    padding: 1em;
+    box-shadow: inset 3px 3px 4px rgba(0,0,0,.5);
 }
 
-@media all and (max-width: 640px) {
-    h2 {
-        font-size: 1.4em;
-    }
+.stripes {
+    height: 2em;
+    width: 100%;
+    background-size: 1em 1em;
+    background-color: #3c3f42;
+    background-image: linear-gradient(
+        -45deg,
+        #fff 25%,
+        transparent 25%,
+        transparent 50%,
+        #fff 50%,
+        #fff 75%,
+        transparent 75%,
+        transparent
+    );
+    margin-bottom: 1em;
 }
 
-ul {
+
+.wrapper {
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    width: 800px;
+    margin: 2em auto 0;
+}
+
+.main,
+.side {
+    float: left;
+}
+
+.main {
+    width: 60%;
+    margin-right: 5%;
+}
+
+.social-icons {
+    overflow: hidden;
     list-style: none;
-    padding-left: 0;
-    margin-top: 0;
+    padding: 0;
+    margin: 0;
+}
+.social-icons li {
+    width: 10%;
+    background-color: white;
+    padding: .5em;
+    margin-right: 2.8%;
+    border-radius: .3em;
+    float: left;
+}
+.social-icons li:last-child {
+    margin-right: 0;
+}
+.social-icons a {
+    overflow: hidden;
+    display: block;
+    background-color: #3c3f42;
+    border-radius: .3em;
+}
+.social-icons img {
+    width: 100%;
+    display: block;
 }
 
-a {
-    color: #c13f01;
+.events-header {
+    overflow: hidden;
+    margin-bottom: 1em;
+}
+.events-body {
+    overflow-y: scroll;
+    width: 100%;
+    max-height: 5em;
+    font-size: .8em;
+}
+.events-event {
+    overflow: hidden;
+    padding-bottom: .5em;
+}
+.events span {
+    display: block;
+    float: left;
+}
+.events-header {
+    font-size: .8em;
+    font-family: 'Stalinist One', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.events-header td {
+    padding-bottom: 1.5em;
+}
+.events-date {
+    width: 20%;
+}
+.events-venue {
+    width: 45%;
+}
+.events-more {
+    font-size: .8em;
+    text-align: right;
+    padding-top: 1em;
+    border-top: solid 1px #ddd;
+    margin-top: 1.5em;
+}
+.events-more-songkick {
+    display: inline-block;
+    color: #3c3f42;
     text-decoration: none;
 }
-
-a:hover {
-    color: #f45001;
+.events-more-songkick img {
+    position: relative;
+    top: 2px;
+    width: 75px;
+    vertical-align: bottom;
+    margin-right: .25em;
 }
 
-a:active {
-    color: #8e2e01;
+.side {
+  width: 35%;
 }
 
-
-/* General Layout */
-
-.content-wrapper {
-    width: 100%;
-    padding: 2.5% 0;
+.background {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 550px;
 }
-
-@media all and (max-width: 640px) {
-    .content-wrapper {
-        padding: 5% 0;
-    }
-}
-
-.content-wrapper > div {
-    padding: 0 5%;
-}
-
-
-/* Header */
-
-#header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-
-/* Footer */
-
-#footer {
+.booking-info {
     position: absolute;
     bottom: 0;
-    left: 0;
-    z-index: 1;
-}
-
-#footer ul {
-    font-size: 1.2em;
-    margin-bottom: 0;
-}
-
-@media all and (max-width: 321px) {
-    #footer ul {
-        font-size: 1em;
-    }
-}
-
-img.background-full {
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
-    filter: alpha(opacity=10);
-    -moz-opacity: 0.1;
-    -khtml-opacity: 0.1;
-    zoom: 1;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 0;
-    min-width: 1200px;
     width: 100%;
-    min-height: 100%;
-    height: auto;
+    color: white;
+    text-align: right;
 }
-
-@media all and (max-width: 960px) {
-    img.background-full {
-        opacity: .6;
-    }
+.booking-info > span {
+    display: inline-block;
+    width: 12em;
 }
-
-@media all and (max-width: 640px) {
-    img.background-full {
-        opacity: .2;
-    }
+.booking-title {
+    font-family: 'Stalinist One', sans-serif;
+    text-transform: uppercase;
+    background-color: #999999;
+    padding: .2em .5em;
+    margin-right: -4px;
 }
-
-@media all and (max-width: 320px) {
-    img.background-full {
-        opacity: .1;
-    }
+.booking-title span {
+    font-size: .7em;
+}
+.booking-email {
+    color: #3c3f42;
+    background-color: white;
+}
+.booking-email span {
+    font-size: .9em;
 }
